--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,9 +3,12 @@
 #
 # Build stage
 #
+
 FROM maven:3.6.0-jdk-11-slim AS build
-COPY src /home/app/src
-COPY pom.xml /home/app
+RUN ECHO "CURRENT DIRECTORY"
+RUN pwd
+COPY app/app/src /home/app/src
+COPY app/app/pom.xml /home/app
 RUN mvn -f /home/app/pom.xml clean package
 
 # this can be used when jar already exists in build folder
